more on optimizing k8s 02